Cambios en header-section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -18,14 +18,18 @@
     <section class="headerSection">
       <button class="navButton" onclick="deploying()">☰</button><!--Para la versión móvil-->
       <nav>
-        <div class="menu"><a>Features</a></div>
-        <div class="menu"><a>Pricing</a></div>
-        <div class="menu"><a>Resources</a></div>
-      </nav>
-      
-      <nav>
-        <div class="logIn"><a>Login</a></div>
-        <div class="signUp"><a>Sign Up</a></div>
+          <img class="logo" src="./images/logo.svg" alt="logo">
+          <div class="navbar-container">
+              <ul class="navbar1">
+                  <li><a href="#" class="navbar-item">Features</a></li>
+                  <li><a href="#" class="navbar-item">Pricing</a></li>
+                  <li><a href="#" class="navbar-item">Resources</a></li>
+              </ul>
+              <ul class="navbar2">
+                  <li><a href="#" class="navbar-item">Login</a></li>
+                  <li><a href="#" class="loginButton"> Sign Up </a></li>
+              </ul>
+          </div>
       </nav>
     </section>
     
