--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
     <link rel=stylesheet type="text/css" href="main.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://kit.fontawesome.com/840ae981af.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -19,16 +20,16 @@
       <button class="navButton" onclick="deploying()">☰</button><!--Para la versión móvil-->
       <nav>
         <img class="logo" src="./images/logo.svg" alt="logo">
-        <div class="navbar-container">
+        <div class="navbar-container hide">
           <ul class="navbar1">
-            <li><a href="#" class="navbar-item hide">Features</a></li>
-            <li><a href="#" class="navbar-item hide">Pricing</a></li>
-            <li><a href="#" class="navbar-item hide">Resources</a></li>
+            <li><a href="#" class="navbar-item">Features</a></li>
+            <li><a href="#" class="navbar-item">Pricing</a></li>
+            <li><a href="#" class="navbar-item">Resources</a></li>
           </ul>
           <hr>
           <ul class="navbar2">
-            <li><a href="#" class="navbar-item hide">Login</a></li>
-            <li><a href="#" class="navbar-item hide">Sign Up</a></li>
+            <li><a href="#" class="navbar-item">Login</a></li>
+            <li><a href="#" class="signUpBtn">Sign Up</a></li>
           </ul>
         </div>
       </nav>
@@ -40,8 +41,10 @@
       on how your links are performing.</p>
       <button class="start">Get Started</button>
       <section class="shorterSection">
-        <input class="shorter" type="text" value="Shorter a link here...">
-        <button class="shortButton">Shorten It!</button>
+        <!--<div class="boostMobile"><img src="images/bg-shorten-mobile.svg"></div>-->
+        <input class="shorter" type="text" value="Shorter a link here..." onfocus="if (this.value=='Shorter a link here...') this.value=''" onblur="if (this.value=='') this.value='Shorter a link here...'" required>
+        <p class="link_please hide2">Please add a link</p>
+        <button class="shortButton" onclick="addlink()">Shorten It!</button>
       </section>
     </section>
     <section class="section2">
@@ -72,8 +75,11 @@
       </section>
     </section>
     <section class="section3">
-      <h2>Boost your links today</h2>
-      <button class="start">Get Started</button>
+      <div class="boostMobile"><img src="images/bg-boost-mobile.svg"></div>
+      <div class="boostStarted">
+        <h2>Boost your links today</h2>
+        <button class="start">Get Started</button>
+      </div>
     </section>
     <section class="footerSection">
       <img class="logoWhite" src="./images/logo.svg" alt="logo">
@@ -96,12 +102,11 @@
         <li><a href="#">Careers</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-      <ul class="footer-socialMedia">
-          <li><a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a></li>
-          <li><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://www.pinterest.com/"><i class="fab fa-pinterest"></i></a></li>
-          <li><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></li>
-
+      <ul class="footerSocialMedia">
+        <li><a href="https://www.facebook.com/"><i title="Facebook" class="fab fa-facebook"></i></a></li>
+        <li><a href="https://twitter.com/"><i title="Twitter" class="fab fa-twitter"></i></a></li>
+        <li><a href="https://www.pinterest.com/"><i title="Pinterest" class="fab fa-pinterest"></i></a></li>
+        <li><a href="https://www.instagram.com/"><i title="Instagram" class="fab fa-instagram"></i></a></li>
       </ul>
     </section>
     <div class="attribution">
