--- a/index.html
+++ b/index.html
@@ -16,109 +16,117 @@
     
   </head>
   <body>
-    <section class="headerSection">
-      <button class="navButton" onclick="deploying()">☰</button><!--Para la versión móvil-->
-      <nav>
-        <img class="logo" src="./images/logo.svg" alt="logo">
-        <div class="navbar-container hide">
-          <ul class="navbar1">
-            <li><a href="#" class="navbar-item">Features</a></li>
-            <li><a href="#" class="navbar-item">Pricing</a></li>
-            <li><a href="#" class="navbar-item">Resources</a></li>
-          </ul>
-          <hr>
-          <ul class="navbar2">
-            <li><a href="#" class="navbar-item">Login</a></li>
-              <li></li>
-            <li style="margin-top:10px;"><a href="#" class="signUpBtn">Sign Up</a></li>
-          </ul>
-        </div>
-      </nav>
-    </section>
-    <section class="section1">
-        <div class="section1Img">
-			<img class="workingImg" src="images/illustration-working.svg">
-        </div>
-		<div class="section1Info">
-			<h1>More than just shorter links</h1>
-			<p>
-				Build your brand's recognition and get detailed insights
-				on how your links are performing.
-			</p>
-			<button class="start">Get Started</button>
-		</div>
-      <section class="shorterSection">
-        <!--<div class="boostMobile"><img src="images/bg-shorten-mobile.svg"></div>-->
-        <input class="shorter" type="text" value="Shorter a link here..." onfocus="if (this.value=='Shorter a link here...') this.value=''" onblur="if (this.value=='') this.value='Shorter a link here...'" required>
-        <p class="link_please hide2">Please add a link</p>
-        <button class="shortButton" onclick="addlink()">Shorten It!</button>
+      <section class="headerSection">
+          <button class="navButton hideButton" onclick="deploying()">☰</button><!--Para la versión móvil-->
+          <nav>
+              <img class="logo" src="./images/logo.svg" alt="logo">
+              <div class="navbar-container hide">
+                  <ul class="navbar1">
+                      <li><a href="#" class="navbar-item">Features</a></li>
+                      <li><a href="#" class="navbar-item">Pricing</a></li>
+                      <li><a href="#" class="navbar-item">Resources</a></li>
+                  </ul>
+                  <hr>
+                  <ul class="navbar2">
+                      <li><a href="#" class="navbar-item">Login</a></li>
+                      <li style="margin-top:10px;"><a href="#" class="signUpBtn">Sign Up</a></li>
+                  </ul>
+              </div>
+          </nav>
       </section>
-    </section>
-    <section class="section2">
-        <h2>Advanced Statistics</h2>
-        <p>Track how your links are performing across the web with our 
-      advanced statistics dashboard.</p>
-      <section class="statisticsSection">
-        <div>
-          <div class="imgIco"><img src="images/icon-brand-recognition.svg"></div>
-          <h3>Brand Recognition</h3>
-          <p>Boost your brand recognition with each click. Generic links don't 
-            mean a thing. Branded links help instil confidence in your content.</p>
-        </div>
-        <hr class ="vr">
-        <div>
-          <div class="imgIco"><img src="images/icon-detailed-records.svg"></div>
-          <h3>Detailed Records</h3>
-          <p>Gain insights into who is clicking your links. Knowing when and where 
-            people engage with your content helps inform better decisions.</p>
-        </div>
-        <hr class ="vr">
-        <div>
-          <div class="imgIco"><img src="images/icon-fully-customizable.svg"></div>
-          <h3>Fully Customizable</h3>
-          <p>Improve brand awareness and content discoverability through 
-            customizable links, supercharging audience engagement.</p>
-        </div>
+      <section class="section1">
+          <div class="section1Img">
+              <img class="workingImg" src="images/illustration-working.svg">
+          </div>
+          <div class="section1Info">
+              <h1>More than just shorter links</h1>
+              <p>
+                  Build your brand's recognition and get detailed insights
+                  on how your links are performing.
+              </p>
+              <button class="start">Get Started</button>
+          </div>
+          <section class="shorterSection">
+              <!--<div class="boostMobile"><img src="images/bg-shorten-mobile.svg"></div>-->
+              <input class="shorter" type="text" value="Shorter a link here..." onfocus="if (this.value=='Shorter a link here...') this.value=''" onblur="if (this.value=='') this.value='Shorter a link here...'" required>
+              <p class="link_please hide2">Please add a link</p>
+              <button class="shortButton" onclick="addlink()">Shorten It!</button>
+          </section>
       </section>
-    </section>
-    <section class="section3">
-      <div class="boostMobile"><img src="images/bg-boost-mobile.svg"></div>
-      <div class="boostStarted">
-        <h2>Boost your links today</h2>
-        <button class="start">Get Started</button>
+      
+      <section class="section2">
+          <h2>Advanced Statistics</h2>
+          <p>
+              Track how your links are performing across the web with our
+              advanced statistics dashboard.
+          </p>
+          <section class="statisticsSection">
+              <div>
+                  <div class="imgIco"><img src="images/icon-brand-recognition.svg"></div>
+                  <h3>Brand Recognition</h3>
+                  <p>
+                      Boost your brand recognition with each click. Generic links don't
+                      mean a thing. Branded links help instil confidence in your content.
+                  </p>
+              </div>
+              <hr class="vr">
+              <div>
+                  <div class="imgIco"><img src="images/icon-detailed-records.svg"></div>
+                  <h3>Detailed Records</h3>
+                  <p>
+                      Gain insights into who is clicking your links. Knowing when and where
+                      people engage with your content helps inform better decisions.
+                  </p>
+              </div>
+              <hr class="vr">
+              <div>
+                  <div class="imgIco"><img src="images/icon-fully-customizable.svg"></div>
+                  <h3>Fully Customizable</h3>
+                  <p>
+                      Improve brand awareness and content discoverability through
+                      customizable links, supercharging audience engagement.
+                  </p>
+              </div>
+          </section>
+      </section>
+      <section class="section3">
+          <div class="boostMobile"><img src="images/bg-boost-mobile.svg"></div>
+          <div class="boostStarted">
+              <h2>Boost your links today</h2>
+              <button class="start">Get Started</button>
+          </div>
+      </section>
+      <section class="footerSection">
+          <img class="logoWhite" src="./images/logo.svg" alt="logo">
+          <ul>
+              <li class="footerTitle">Features</li>
+              <li><a href="#">Link Shortening</a></li>
+              <li><a href="#">Branded Links</a></li>
+              <li><a href="#">Analytics</a></li>
+          </ul>
+          <ul>
+              <li class="footerTitle">Resources</li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Developers</a></li>
+              <li><a href="#">Support</a></li>
+          </ul>
+          <ul>
+              <li class="footerTitle">Company</li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Our Team</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+          <ul class="footerSocialMedia">
+              <li><a href="https://www.facebook.com/" target="_blank"><i title="Facebook" class="fab fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/" target="_blank"><i title="Twitter" class="fab fa-twitter"></i></a></li>
+              <li><a href="https://www.pinterest.com/" target="_blank"><i title="Pinterest" class="fab fa-pinterest"></i></a></li>
+              <li><a href="https://www.instagram.com/" target="_blank"><i title="Instagram" class="fab fa-instagram"></i></a></li>
+          </ul>
+      </section>
+      <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+          Coded by <a href="#">Brenda Vielmas, Candelario Avalos, Eduardo Jiménez</a>.
       </div>
-    </section>
-    <section class="footerSection">
-      <img class="logoWhite" src="./images/logo.svg" alt="logo">
-      <ul>
-        <li class="footerTitle">Features</li>
-        <li><a href="#">Link Shortening</a></li>
-        <li><a href="#">Branded Links</a></li>
-        <li><a href="#">Analytics</a></li>
-      </ul>
-      <ul>
-        <li class="footerTitle">Resources</li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Developers</a></li>
-        <li><a href="#">Support</a></li>
-      </ul>
-      <ul>
-        <li class="footerTitle">Company</li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Our Team</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="footerSocialMedia">
-        <li><a href="https://www.facebook.com/" target="_blank"><i title="Facebook" class="fab fa-facebook"></i></a></li>
-        <li><a href="https://twitter.com/" target="_blank"><i title="Twitter" class="fab fa-twitter"></i></a></li>
-        <li><a href="https://www.pinterest.com/" target="_blank"><i title="Pinterest" class="fab fa-pinterest"></i></a></li>
-        <li><a href="https://www.instagram.com/" target="_blank"><i title="Instagram" class="fab fa-instagram"></i></a></li>
-      </ul>
-    </section>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Brenda Vielmas, Candelario Avalos, Eduardo Jiménez</a>.
-    </div>
   </body>
 </html>
