API in progress and CSS desktop version
Co-authored-by: EduJimenez96 <ejimenez10@ucol.mx>
Co-authored-by: candelarioavalos <candelario.avalos@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                       <li><a href="#" class="navbar-item">Pricing</a></li>
                       <li><a href="#" class="navbar-item">Resources</a></li>
                   </ul>
-                  <hr>
+                  <hr class ="linea_menu">
                   <ul class="navbar2">
                       <li><a href="#" class="navbar-item">Login</a></li>
                       <li style="margin-top:10px;"><a href="#" class="signUpBtn">Sign Up</a></li>
@@ -48,22 +48,13 @@
           </div>
           <section class="shorterSection">
               <!--<div class="boostMobile"><img src="images/bg-shorten-mobile.svg"></div>-->
-<<<<<<< HEAD
-              <input class="shorter" type="text" value="Shorter a link here..." onfocus="if (this.value=='Shorter a link here...') this.value=''" onblur="if (this.value=='') this.value='Shorter a link here...'" required>
-              <button class="shortButton" onclick="addlink()">Shorten It!</button>
-              <p class="link_please hide2">Please add a link</p>
-          </section>
-      </section>
-      
-=======
-              <form action="/" method="post">
+              <form id="formShorter" action="scriptmain.js" method="post">
                   <input class="shorter" type="text" placeholder="Shorter a link here..." required>
                   <button class="shortButton" onclick="addlink()" type="submit">Shorten It!</button>
                   <p class="link_please hide2">Please add a link</p>
               </form>
           </section>
       </section>
->>>>>>> 5efbd88... desktop design modifications and api function
       <section class="section2">
           <h2>Advanced Statistics</h2>
           <p>
@@ -71,11 +62,7 @@
               advanced statistics dashboard.
           </p>
           <section class="statisticsSection">
-<<<<<<< HEAD
-              <div>
-=======
               <div class="brandRecognition">
->>>>>>> 5efbd88... desktop design modifications and api function
                   <div class="imgIco"><img src="images/icon-brand-recognition.svg"></div>
                   <h3>Brand Recognition</h3>
                   <p>
@@ -84,11 +71,7 @@
                   </p>
               </div>
               <hr class="vr">
-<<<<<<< HEAD
-              <div>
-=======
               <div class="detailedRecords">
->>>>>>> 5efbd88... desktop design modifications and api function
                   <div class="imgIco"><img src="images/icon-detailed-records.svg"></div>
                   <h3>Detailed Records</h3>
                   <p>
@@ -97,11 +80,7 @@
                   </p>
               </div>
               <hr class="vr">
-<<<<<<< HEAD
-              <div>
-=======
               <div class="fullyCuztomizable">
->>>>>>> 5efbd88... desktop design modifications and api function
                   <div class="imgIco"><img src="images/icon-fully-customizable.svg"></div>
                   <h3>Fully Customizable</h3>
                   <p>
@@ -113,10 +92,7 @@
       </section>
       <section class="section3">
           <div class="boostMobile"><img src="images/bg-boost-mobile.svg"></div>
-<<<<<<< HEAD
-=======
           <div class="boostDesktop"><img src="images/bg-boost-desktop.svg"></div>
->>>>>>> 5efbd88... desktop design modifications and api function
           <div class="boostStarted">
               <h2>Boost your links today</h2>
               <button class="start">Get Started</button>
