Clone the shorted url divs and set the copy button Co-authored-by: BrendaVielmas <breen.vielmas@gmail.com> Co-authored-by: candelarioavalos <candelario.avalos@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -56,8 +56,16 @@
             <input class="shorter" type="text" placeholder="Shorter a link here..." required>
               <button class="shortButton" onclick="addlink()" type="submit">Shorten It!</button>
               <p class="link_please hide2">Please add a link</p>
-            </div>  
+            </div>
           </section>
+          <div class="url_shorted hide_shorted">
+            <ul>
+                <li><a href="#" class="longUrl">largo</a></li>
+                <hr class="hr_shorter">
+                <li><a href="#" class="shortUrl">corto</a></li>
+            </ul>
+            <button class=copyButton onclick="copyLink()">Copy</button>
+          </div>
       </section>
       <section class="section2">
           <h2>Advanced Statistics</h2>
