Corrections on cloned short url divs
Co-authored-by: BrendaVielmas <breen.vielmas@gmail.com>
Co-authored-by: candelarioavalos <candelario.avalos@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
           </section>
           <div class="url_shorted hide_shorted">
             <ul>
-                <li><a href="#" class="longUrl">largo</a></li>
+                <li><a href="#" class="longUrl">long</a></li>
                 <hr class="hr_shorter">
-                <li><a href="#" class="shortUrl">corto</a></li>
+                <li><a href="#" class="shortUrl">short</a></li>
             </ul>
             <button class=copyButton onclick="copyLink()">Copy</button>
           </div>
